# cshell

./: Cargo.toml  README.md  setup.nu  setup.sh
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
