[package]
name = "cshell_macros"
description = "a support macros for cshell"
authors = ["Abdogouhmad <gouhmad@hotmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Abdogouhmad/cshell"
categories = ["cli", "shell", "linux"]
keywords = ["change", "shell", "linux", "cli"]

# [lib]
# proc-macro = true

[dependencies]
# syn = { version = "2.0.85", features = ["full"] }
# proc-macro2 = "1.0.89"
# proc-macro-error2 = "2.0.1"
